# rustlab-2023-robotic-sumo

./: LICENSE  README.md
bot/: .gitignore  Cargo.toml  README.md  build.rs  get-panic.sh  rust-toolchain.toml
bot-3d/: 3dmodel.md  bot-parts-light.scad  bot-parts.scad  print-light.scad  print.scad
bot-msg/: Cargo.toml
bot-msg/src/: main.rs
bot/.cargo/: config
bot/src/: main.rs
