[package]
name = "rustlab-sumo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "0.2.0", features = [] }
embassy-executor = { version = "0.2.0", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
] }
embassy-futures = { version = "0.1.0" }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "proto-ipv4",
    "socket",
    "async",
] }


embassy-time = { features = [
    "nightly",
    "unstable-traits",
], git = "https://github.com/embassy-rs/embassy.git", rev = "9d8c527308522698bfb6596bdb67bec826e0fb5a" }

embassy-embedded-hal = { features = [
], git = "https://github.com/embassy-rs/embassy.git", rev = "9d8c527308522698bfb6596bdb67bec826e0fb5a" }
embassy-rp = { features = [
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
], git = "https://github.com/embassy-rs/embassy.git", rev = "9d8c527308522698bfb6596bdb67bec826e0fb5a" }
embassy-usb = { features = [
], git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", rev = "9d8c527308522698bfb6596bdb67bec826e0fb5a" }
cyw43 = { features = [
    "firmware-logs",
], git = "https://github.com/embassy-rs/embassy.git", rev = "9d8c527308522698bfb6596bdb67bec826e0fb5a" }
cyw43-pio = { features = [
    "overclock",
], git = "https://github.com/embassy-rs/embassy.git", rev = "9d8c527308522698bfb6596bdb67bec826e0fb5a" }
embassy-net = { features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
], git = "https://github.com/embassy-rs/embassy.git", rev = "9d8c527308522698bfb6596bdb67bec826e0fb5a" }
embassy-net-driver = { features = [
], git = "https://github.com/embassy-rs/embassy.git", rev = "9d8c527308522698bfb6596bdb67bec826e0fb5a" }
embassy-net-driver-channel = { features = [
], git = "https://github.com/embassy-rs/embassy.git", rev = "9d8c527308522698bfb6596bdb67bec826e0fb5a" }

fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = "0.7.15"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-0 = { package = "embedded-hal", version = "=0.2.7" }
embedded-hal-async = "=1.0.0-rc.1"
embedded-io-async = { version = "0.5.0" }
embedded-storage = { version = "0.3" }

static_cell = { version = "1.1", features = ["nightly"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
rp2040-panic-usb-boot = "0.5.0"
rp2040-hal = { version = "0.8.2" }

ufmt = "0.2.0"
ufmt_float = "0.2.0"
arrayvec = { version = "0.7.2", default-features = false }
